# aac

./: .gitignore  README.md  context.txt  sample_ha_invalid.yaml  sample_invalid.yaml  sample_valid.yaml  test-validate.js  test-validate.ts
.agent/workflows/: test_regression.md
cli/: pyproject.toml
cli-ts/: index.js  index.js.map  index.ts  package-lock.json  package.json  test-generate.ts  test-ui-delete.ts  test-ui-edge-only.ts  tsconfig.json
cli/arch_agent/: main.py
cli/crossplane_out/: claims-processing-api-xr.yaml
example/: architecture.yaml  multi_region.yaml
registry/: detectors.yaml  hierarchy-registry.yaml  pattern-registry.yaml  patterns.json  widget-registry.yaml
registry-draft/: detectors.yaml  hierarchy-registry.yaml  pattern-registry.yaml  widget-registry.yaml
registry-draft/patterns/batch-workload-ocp/1.0.0/: batch-workload-ocp.yaml
registry-draft/schemas/: pattern-schema.json
registry/schemas/: pattern-schema.json  widget-schema.json
ui/: package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
ui/e2e/: canvas.spec.ts  ha-api-expansion.spec.ts  import-export.spec.ts
ui/playwright-report/: index.html
ui/src/: App.tsx  index.css  types.d.ts  types.d.ts.map  types.ts
ui/src/components/: Canvas.tsx  Nodes.tsx  PropertyPanel.tsx  Sidebar.tsx
ui/src/lib/: RegistryClient.ts  ResolverEngine.ts  detector.ts  registry.ts  validator.ts
ui/test-results/: .last-run.json
ui/test-results/canvas-Sovereign-Architect-edd59-tly-enforce-visual-clipping-chromium/: error-context.md
(+35 files in other folders)
